Fixed social icons clipping in Chromium

--- a/scss/partials/_icons.scss
+++ b/scss/partials/_icons.scss
@@ -12,7 +12,7 @@ Shared styles for icons
     display: inline-block;
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     vertical-align: top;
 }
 
